--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241022.0",
+    "daisyui": "^4.12.14",
     "wrangler": "^3.83.0"
   }
 }
